--- a/UI/style.css
+++ b/UI/style.css
@@ -13,6 +13,7 @@ header {
    justify-content: space-between;
    background-color: #800000;
    padding: 5px 10px 5px 10px;
+   height: 80px;
 }
 
 header a {
@@ -51,4 +52,53 @@ header a {
         color: #000000;
         border-bottom: 3px solid #000000;
     }
+}
+
+.main {
+    height: 100%;
+}
+
+.main p {
+    text-align: center;
+}
+
+.description {
+    padding: 5px;
+}
+
+.description p {
+    font-size: 40px;
+    color: #696969;
+}
+
+#register {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+#register a {
+    text-decoration: none;
+    color: #211d1d;
+    padding: 10px;
+    text-align: center;
+    font-size: 16px;
+    font-weight: bold;
+    background-color: #f7ce04;
+}
+
+.services {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    border: 3px solid orange;
+}
+
+.red-flag {
+    border: 3px solid blueviolet;
+}
+
+.intervention {
+    border: 3px solid brown;
 }
