--- a/UI/style.css
+++ b/UI/style.css
@@ -1,8 +1,18 @@
-.container {
-    width: 100%;
+html, .container{
+    /*width: 100%;*/
     height: 100%;
+    min-height: 100%;
     margin: 0px;
     background-color: #fff8dc;
+}
+
+.container {
+    display: flex;
+    flex-direction: column;
+}
+
+header .footer {
+    flex: none;
 }
 
 header {
@@ -55,7 +65,7 @@ header a {
 }
 
 .main {
-    height: 100%;
+    flex: auto;
 }
 
 .main p {
@@ -87,18 +97,58 @@ header a {
     background-color: #f7ce04;
 }
 
-.services {
+footer {
+    background-color: #800000;
+    color: #f5deb3;
+    height: 80px;
+    margin-top: 30px;
+    padding: 10px;
     display: flex;
     flex-direction: row;
     justify-content: space-around;
+    align-items: center;
     flex-wrap: wrap;
+}
+
+.footer-content {
+    font-style: italic;
+}
+/*
+#footer-left {
+    border: 3px solid yellow;
+}
+
+#footer-right {
+    display: flex;
+    align-content: center;
+    padding: 20px;
     border: 3px solid orange;
 }
 
-.red-flag {
-    border: 3px solid blueviolet;
+.contact-form li {
+    display: block;
+    list-style-type: none;
+    padding-bottom: 10px;
 }
 
-.intervention {
-    border: 3px solid brown;
+.field-size {
+    width: 100%;
+    border-radius: 5px;
 }
+
+#message {
+    height: 80px;
+}
+
+.footer-label {
+    font-size: 22px;
+}
+
+.footer-text {
+    font-size: 18px;
+    color: #f5deb3;
+}
+
+#send {
+    color: #211d1d;
+}*/
