--- a/UI/style.css
+++ b/UI/style.css
@@ -66,6 +66,7 @@ header a {
 
 .main {
     flex: auto;
+    padding: 20px;
 }
 
 .main p {
@@ -113,3 +114,38 @@ footer {
 .footer-content {
     font-style: italic;
 }
+
+/* Sign Up Page*/
+.sign-up-form {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    align-items: center;
+    padding: 10px;
+    font-size: 18px;
+}
+.sign-up-form li {
+    margin: 0 auto;
+    list-style-type: none;
+    padding-bottom: 10px;
+}
+.sign-up-form label {
+    color: #800000;
+    padding-left: 10px;
+}
+
+.field-size {
+    width: 100%;
+}
+
+#submit {
+    color: #211d1d;
+    background-color: #ffff00;
+    margin-top: 40px;
+    margin-left: auto;
+    border:none;
+    padding: 10px;
+    text-align: center;
+    font-size: 16px;
+    font-weight: bold;
+  }
