--- a/UI/style.css
+++ b/UI/style.css
@@ -115,7 +115,7 @@ footer {
     font-style: italic;
 }
 
-/* Sign Up Page*/
+/* Sign Up and Sign In */
 .sign-up-form {
     display: flex;
     flex-direction: column;
@@ -148,4 +148,8 @@ footer {
     text-align: center;
     font-size: 16px;
     font-weight: bold;
+  }
+
+  #remember-me {
+    color: #800000;
   }
