--- a/UI/style.css
+++ b/UI/style.css
@@ -153,3 +153,13 @@ footer {
   #remember-me {
     color: #800000;
   }
+
+  #geolocation {
+    text-decoration: none;
+    color: #211d1d;
+    padding: 10px;
+    text-align: center;
+    font-size: 16px;
+    font-weight: bold;
+    background-color: #ffff00;
+  }
