--- a/UI/style.css
+++ b/UI/style.css
@@ -148,6 +148,7 @@ footer {
     text-align: center;
     font-size: 16px;
     font-weight: bold;
+    text-decoration: none;
 }
 
 #remember-me {
@@ -166,4 +167,14 @@ footer {
 
 #location-view {
     border: 1px solid #000000;
+}
+
+.timeline li {
+    list-style-type: none;
+    margin-bottom: 10px; 
+}
+
+.timeline h1, .timeline h2 {
+    border: 2px solid black;
+    width: 600px;
 }
