--- a/UI/style.css
+++ b/UI/style.css
@@ -178,3 +178,9 @@ footer {
     border: 2px solid black;
     width: 600px;
 }
+
+#search-timeline {
+    width: 130px;
+    height: 40px;
+    margin-right: 15px;
+}
