--- a/UI/style.css
+++ b/UI/style.css
@@ -69,9 +69,9 @@ header a {
     padding: 20px;
 }
 
-.main p {
+/*.main p {
     text-align: center;
-}
+}*/
 
 .description {
     padding: 5px;
@@ -183,4 +183,16 @@ footer {
     width: 130px;
     height: 40px;
     margin-right: 15px;
+}
+
+.iroperter-statistics {
+    display: flex;
+    justify-content: center;
+}
+
+.issue-statistic {
+    flex: 1 1 160px;
+    border: 2px solid black;
+    border-radius: 5px;
+    margin-left: 20px;
 }
