--- a/UI/style.css
+++ b/UI/style.css
@@ -196,3 +196,59 @@ footer {
     border-radius: 5px;
     margin-left: 20px;
 }
+
+#iroperter-statuses {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.ireporter-child-status {
+    border: 1px solid black;
+    border-radius: 5px;
+    margin: 10px auto;
+    padding: 10px;
+    margin-left: 10px;
+}
+
+#report-title {
+    flex-grow: 1;
+}
+
+#report-number {
+    width: 100px;
+}
+
+#report-status {
+    width: 300px;
+    position: relative;
+    display: inline-block;
+}
+
+.select-status-btn {
+    color: #211d1d;
+    padding: 10px;
+    text-align: center;
+    font-size: 16px;
+    font-weight: bold;
+    background-color: #ffff00;
+    border: none;
+}
+
+.status-items {
+    display: none;
+    position: absolute;
+    background-color: #696969;
+    min-width: 160px;
+    z-index: 1;
+}
+
+.status-items a {
+    text-decoration: none;
+    color: black;
+    padding: 12px 16px;
+    display: block;
+}
+
+#report-status:hover .status-items {
+    display: block;
+}
