[Finishes #162112200] Style the view for showing all users redflags and interventions

--- a/UI/style.css
+++ b/UI/style.css
@@ -252,3 +252,8 @@ footer {
 #report-status:hover .status-items {
     display: block;
 }
+
+.timeline #username {
+    border: 2px solid black;
+    width: 300px;
+}
