--- a/UI/css/styles.css
+++ b/UI/css/styles.css
@@ -1,18 +1,14 @@
-html, .container{
-    /*width: 100%;*/
+html, body {
+    width: 100%;
     height: 100%;
-    min-height: 100%;
     margin: 0px;
-    background-color: #fff8dc;
 }
 
 .container {
+    min-height: 100%;
     display: flex;
     flex-direction: column;
-}
-
-header .footer {
-    flex: none;
+    align-items: stretch;
 }
 
 header {
@@ -64,14 +60,13 @@ header a {
     }
 }
 
-.main {
-    flex: auto;
-    padding: 20px;
+main {
+    flex-grow: 1;
 }
 
-/*.main p {
-    text-align: center;
-}*/
+header, main, footer {
+    flex-shrink: 0;
+}
 
 .description {
     padding: 5px;
