--- a/UI/css/styles.css
+++ b/UI/css/styles.css
@@ -23,8 +23,8 @@ header {
 }
 
 header a {
-    text-decoration: none;
     color: #a9a9a9;
+    text-decoration: none;
     padding: 0 10px 0px 10px;
     text-align: center;
     font-size: 16px;
@@ -37,17 +37,11 @@ header a {
     color: #f5deb3;
 }
 
-.navigation {
+.navigation-links {
     padding: 8px;
 }
 
-.nav-bg-col {
-    background-color: #ffff00;
-    margin-right: 15px;
-    padding: 12px;
-}
-
-.navigation a:hover {
+.navigation-links a:hover {
     animation-name: navigation-font-color;
     animation-duration: 500ms;
     animation-fill-mode: forwards;
@@ -58,6 +52,12 @@ header a {
         color: #000000;
         border-bottom: 3px solid #000000;
     }
+}
+
+.btn-bg-col {
+    background-color: #ffff00;
+    margin-right: 15px;
+    padding: 12px;
 }
 
 main {
@@ -84,13 +84,12 @@ header, main, footer {
 }
 
 #register a {
+    color: #000000;
     text-decoration: none;
-    color: #211d1d;
     padding: 10px;
     text-align: center;
     font-size: 16px;
-    font-weight: bold;
-    background-color: #f7ce04;
+    background-color: #ffff00;
 }
 
 footer {
