--- a/UI/css/styles.css
+++ b/UI/css/styles.css
@@ -110,39 +110,28 @@ footer {
 }
 
 /* Sign Up and Sign In */
-.sign-up-form {
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
-    align-items: center;
-    padding: 10px;
-    font-size: 18px;
-}
-.sign-up-form li {
-    margin: 0 auto;
-    list-style-type: none;
-    padding-bottom: 10px;
-}
-.sign-up-form label {
-    color: #800000;
-    padding-left: 10px;
-}
-
-.field-size {
-    width: 100%;
-}
-
 #submit {
     color: #211d1d;
     background-color: #ffff00;
-    margin-top: 40px;
-    margin-left: auto;
-    border:none;
+    border: none;
     padding: 10px;
     text-align: center;
     font-size: 16px;
     font-weight: bold;
-    text-decoration: none;
+}
+
+.contact-wrapper {
+    margin: 0 auto;
+    text-align: center;
+    padding: 0px;
+}
+
+.contact-form input {
+   font-size: 120%;
+}
+
+#contact-form-label {
+    font-size: 24px;
 }
 
 #remember-me {
