--- a/UI/css/styles.css
+++ b/UI/css/styles.css
@@ -174,6 +174,10 @@ footer {
     border: 2px solid brown;
 }
 
+.timeline-remove-btn {
+    width: 100px;
+}
+
 #search-timeline {
     width: 130px;
     height: 40px;
