--- a/UI/css/styles.css
+++ b/UI/css/styles.css
@@ -231,50 +231,11 @@ footer {
     height: 100px;
 }
 
-#report-title {
-    flex-grow: 1;
+#change-status {
+    height: 40px;
 }
 
-#report-number {
-    width: 100px;
-}
-
-#report-status {
-    width: 300px;
-    position: relative;
-    display: inline-block;
-}
-
-.select-status-btn {
-    color: #211d1d;
-    padding: 10px;
-    text-align: center;
-    font-size: 16px;
-    font-weight: bold;
-    background-color: #ffff00;
-    border: none;
-}
-
-.status-items {
-    display: none;
-    position: absolute;
-    background-color: #696969;
-    min-width: 160px;
-    z-index: 1;
-}
-
-.status-items a {
-    text-decoration: none;
-    color: black;
-    padding: 12px 16px;
-    display: block;
-}
-
-#report-status:hover .status-items {
-    display: block;
-}
-
-.timeline #username {
-    border: 2px solid black;
-    width: 300px;
+#username {
+    color: #800000;
+    border: 1px dotted #000000;
 }
