--- a/UI/css/styles.css
+++ b/UI/css/styles.css
@@ -58,20 +58,6 @@ header a {
     display: inline-block;
 }
 
-/*
-.navigation-links a:hover {
-    animation-name: navigation-font-color;
-    animation-duration: 500ms;
-    animation-fill-mode: forwards;
-}
-
-@keyframes navigation-font-color {
-    100% {
-        color: #000000;
-        border-bottom: 3px solid #000000;
-    }
-}*/
-
 main {
     flex-grow: 1;
     padding: 20px;
@@ -111,7 +97,7 @@ header, main, footer {
 
 footer {
     background-color: #4a4a48;
-    color: #edb228;;
+    color: #edb228;
     height: 100px;
     margin-top: 30px;
     padding: 10px;
@@ -161,6 +147,40 @@ input#latitude, input#longitude {
 
 #main-inner-label {
     font-size: 24px;
+}
+
+.main-search-bar {
+    max-width: 300px;
+    margin: 20px auto 0 auto;
+    display: flex;
+}
+
+.main-search-inner {
+    color: #FFF;
+    font-size: 20px;
+    margin: auto;
+}
+
+.report-search-form {
+    margin: 0 auto;
+}
+
+.report-search-form-text {
+    padding:10px 15px;
+    border:0px solid #dbdbdb;
+}
+
+.report-search-form-button {
+    position:relative;
+    padding:8px 15px;
+    left:-8px;
+    border:2px solid #edb228;
+    background-color:#edb228;
+    color:#fafafa;
+}
+
+.report-search-form-button:hover {
+    color: #000000;
 }
 
 .create-report {
@@ -228,7 +248,7 @@ textarea {
     display: inline-block;
 }
   
-.file-upload-btn {
+.file-upload-btn, .main-search-btn {
     border: 2px solid gray;
     color: black;
     background-color: white;
@@ -248,6 +268,56 @@ textarea {
 }
 
 /* Form Contents */
+
+.main-search-content {
+    background-color: white;
+    max-width: 1300px;
+    height: 200px;
+    margin: 40px auto 0 auto;
+    line-height: 1.65;
+    display: flex;
+}
+
+.main-search-content-type {
+    background-color: #edb228;
+    display: flex;
+    flex: 1;
+    font-weight: bold;
+}
+
+.home-report-type {
+    margin: auto;
+}
+
+.main-search-content-description {
+    display: flex;
+    flex: 3;
+    padding: 5px;
+}
+
+.main-search-content-options {
+    background-color: #211d1d;
+    color: white;
+    display: flex;
+    flex-direction: column;
+    flex: 1;
+}
+
+.main-search-image {
+    margin: auto;
+}
+
+.main-search-video {
+    margin: auto;
+}
+
+.main-search-location {
+    margin: auto;
+}
+
+.main-search-btn:hover {
+    background-color: #edb228;
+}
 
 /* Style the user timeline */
 .timeline {
