--- a/UI/css/styles.css
+++ b/UI/css/styles.css
@@ -389,3 +389,23 @@ select#change-status {
     padding: 5px;
     font-weight: bold;
 }
+
+.admin-registration {
+    max-width: 900px;
+    margin: 40px auto 0 auto;
+    display: flex;
+}
+
+.admin-login {
+    padding: 20px;
+    flex: 1;
+}
+
+.admin-signup {
+    padding: 20px;
+    flex: 1;
+}
+
+#admin-login-form {
+    background-color: gray;
+}
